--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -8201,7 +8201,7 @@ li.item {
 
 .cycles {
   display: block;
-  position: absolute;
+  position: relative;
   padding-top: 120;
   width: 100%; }
 
@@ -8219,8 +8219,9 @@ li.item {
 
 .circle-cycle {
   display: block;
-  position: absolute;
-  top: 30px; }
+  position: relative;
+  top: 30px;
+  margin-bottom: 30px; }
 
 .top-left {
   width: 25%;
