--- a/www/templates/cycles_pain.html
+++ b/www/templates/cycles_pain.html
@@ -6,7 +6,7 @@
         <h2><img src="img/cycle-icon-small.png" class="cycles-icon" />&nbsp;Discover Your Pain Cycle</h2>
         <div class="paragraph-list"><p>When I am in conflict with my spouse, I commonly feel (choose two or three):</p></div>
         <div class="padding">
-            <form name="cyclesPainForm" novalidate="" ng-submit="cycles(cyclesPainForm)">
+            <form name="cyclesPainForm" novalidate="" ng-submit="process('menu.tabs.cycles_pain_copes',cyclesPainForm)">
              <ul class="cycles-pain list">
                 <li class="item item-checkbox">
                     <label class="checkbox">
