--- a/www/templates/cycles_peace.html
+++ b/www/templates/cycles_peace.html
@@ -12,7 +12,7 @@
         </p>
         <p>In creating your Peace Cycle choose truths that answer the feelings/negative messages in your pain cycle. The truth about me is I am (choose up to three):</p></div>
         <div class="padding">
-            <form name="cyclesPeaceForm" novalidate="" ng-submit="cycles(cyclesPeaceForm)">
+            <form name="cyclesPeaceForm" novalidate="" ng-submit="process('menu.tabs.cycles_peace_response',cyclesPeaceForm)">
              <ul class="cycles-peace list">
                 <li class="item item-checkbox">
                     <label class="checkbox">
