--- a/www/templates/cycles_results.html
+++ b/www/templates/cycles_results.html
@@ -41,8 +41,8 @@
                 <img src="img/circle.svg" class="bottom-right-arrow" width="100%" />
             </div>
             <div class="padding">
-                <button href="#" class="button button-block button-calm">Edit Your Pain Cycle</button>
-                <button href="#" class="button button-block button-positive">Discover Your Peace Cycle</button>
+                <button ui-sref="menu.tabs.cycles_peace" class="button button-block button-calm">Edit Your Peace Cycle</button>
+                <button ui-sref="menu.tabs.cycles_pain" class="button button-block button-positive">Discover Your Pain Cycle</button>
             </div>
         </div>
 	</ion-content>
