--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -2,78 +2,15 @@
 	<ion-nav-title>
 		<img src="img/logo.png" class="title-image" />
 	</ion-nav-title>
-	<ion-content delegate-handle="home_pull">
-		<ion-refresher pulling-text="Pull to refresh..." on-refresh="update()"></ion-refresher>
+	<ion-content>
+		<h2><img src="img/usness-icon-small.png" class="cycles-icon" />&nbsp;Welcome to MarriageStrong</h2>
 		<div class="padding">
-			<h2>US-ness</h2>
-			<div class="row">
-				<div class="col">
-					<a ui-sref="menu.tabs.usness">USNess</a>
-				</div>
-				<div class="col">
-					<a ui-sref="menu.tabs.usness_activities">Activities</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col">
-					<a ui-sref="menu.tabs.usness_activities_further">Activities Further</a>
-				</div>
-				<div class="col">
-					<a ui-sref="menu.tabs.usness_gifts">Gifts</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col">
-					<a ui-sref="menu.tabs.usness_gifts_results">Gifts Results</a>
-				</div>
-				<div class="col">
-					<a ui-sref="menu.tabs.usness_personality">Personality</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col">
-					<a ui-sref="menu.tabs.usness_personality_results">Personality Results</a>
-				</div>
-			</div>
-			<h2>Cycles</h2>
-			<div class="row">
-				<div class="col">
-					<a ui-sref="menu.tabs.cycles">Cycles</a>
-				</div>
-				<div class="col">
-					<a ui-sref="menu.tabs.cycles_pain_copes">Pain Copes</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col">
-					<a ui-sref="menu.tabs.cycles_pain_results">Pain Results</a>
-				</div>
-				<div class="col">
-					<a ui-sref="menu.tabs.cycles_pain">Pain</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col">
-					<a ui-sref="menu.tabs.cycles_peace_response">Peace Response</a>
-				</div>
-				<div class="col">
-					<a ui-sref="menu.tabs.cycles_peace">Peace</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col">
-					<a ui-sref="menu.tabs.cycles_results">Results</a>
-				</div>
-			</div>
-			<h2>4 Steps</h2>
-			<div class="row">
-				<div class="col">
-					<a ui-sref="menu.tabs.4steps">4 Steps</a>
-				</div>
-				<div class="col">
-					<a ui-sref="menu.tabs.4steps_setup">Setup</a>
-				</div>
-			</div>
+			<h1>Welcome</h1>
+			<p>This is a paragraph introducing the app with <b>ridiculous</b> generated random filler text since Tony doesn't write well... that preparatory one dropped a this far petulant alas some reverent as when hence less one and droll blind diabolically across that forsook unkind woodchuck the porcupine hectically strode and diabolic and oversold hazy the the contrary flapped.</p>
+			<a ui-sref="menu.tabs.profile" class="button button-block button-positive">Set Up Your Profile</a>
+			<a ui-sref="menu.tabs.usness" class="button button-block button-calm">Discover Your US-Ness</a>
+			<a ui-sref="menu.tabs.cycles" class="button button-block button-calm">Define your pain and peace cycle</a>
+			<a ui-sref="menu.tabs.4steps" class="button button-block button-calm">Plan your 4 steps</a>
 		</div>
 	</ion-content>
 </ion-view>
