--- a/www/templates/quizzes_usness_results.html
+++ b/www/templates/quizzes_usness_results.html
@@ -34,7 +34,7 @@ Wow – your Us is doing great! Take some time and share with your spouse the wa
             <div class="padding">
                 <p>As you view your scores, remember the results might put you into a place of pain. If so, use the 4 Steps to move from your pain cycle to your peace cycle.</p>
                 <br>
-                <button href="#" class="button button-block button-positive">Continue</button>
+                <button ui-sref="menu.tabs.home" class="button button-block button-positive">Continue</button>
             </div>
 	</ion-content>
 </ion-view>
