--- a/www/templates/resources.html
+++ b/www/templates/resources.html
@@ -1,7 +1,12 @@
 <ion-view view-title="Resources">
 	<ion-content>
 		<div class="padding">
-			Resources
+			<ul>
+				<li>Boone Center for the Family:  <a href="#" onclick="window.open('http://family.pepperdine.edu','_system','location=yes')">family.pepperdine.edu</a></li>
+				<li>Fuller/Marriage &amp; Family Therapy Dept: <a href="#" onclick="window.open('http://fuller.edu/mft','_system','location=yes')">fuller.edu/mft</a></li>
+				<li>5 Days to a New Marriage: <a href="#" onclick="window.open('http://5daystoanewmarriage.com','_system','location=yes')">5daystoanewmarriage.com</a></li>
+				<li>Hideaway Experience: <a href="#" onclick="window.open('http://intensives.com','_system','location=yes')">intensives.com</a></li>
+			</ul>
 		</div>
 	</ion-content>
 </ion-view>
