--- a/www/templates/usness_activities.html
+++ b/www/templates/usness_activities.html
@@ -7,7 +7,7 @@
 		<div class="padding">
             <p>Every couple is unique. Every Us-ness has it’s own activities that connect and strengthen them. Choose from the following list all activities that make your Us-ness strong. Remember Us will do things differently than one of you would do it by yourself.</p>
         </div>
-            <form class="usnessActivitiesForm" name="usnessActivitiesForm" novalidate="" ng-submit="usnessActivities(usnessActivitiesForm)">
+            <form class="usnessActivitiesForm" name="usnessActivitiesForm" novalidate="" ng-submit="process('menu.tabs.usness_activities_further',usnessActivitiesForm)">
                 <div class="padding">
                     <ul class="list">
                         <li class="item item-checkbox">
