--- a/www/templates/usness_activities_further.html
+++ b/www/templates/usness_activities_further.html
@@ -12,7 +12,7 @@
                 2. Based on the activities you chose what are 3 collective characteristics of your Us identity:
             </p>
         </div>
-            <form class="usnessFurtherForm" name="usnessFurtherForm" novalidate="" ng-submit="usnessFurther(usnessFurtherForm)">
+            <form class="usnessFurtherForm" name="usnessFurtherForm" novalidate="" ng-submit="process('menu.tabs.usness',usnessFurtherForm)">
                 <div class="grey_bg">
                     <div class="padding">
                         <div class="list list-inset">
