--- a/www/templates/usness_gifts.html
+++ b/www/templates/usness_gifts.html
@@ -7,7 +7,7 @@
 		<div class="padding">
             <p>For couples interested in their spiritual Us-ness, you can take a spiritual gift inventory online; there are a lot available from different theological perspectives. If you are more familiar with spiritual gifts, choose your top three from the list below:</p>
         </div>
-            <form class="usnessGiftsForm" name="usnessGiftsForm" novalidate="" ng-submit="usnessGifts(usnessGiftsForm)">
+            <form class="usnessGiftsForm" name="usnessGiftsForm" novalidate="" ng-submit="process('menu.tabs.usness_gifts_results',usnessGiftsForm)">
                 <div class="padding">
                     <ul class="list">
                         <li class="item item-checkbox">
