--- a/www/templates/usness_gifts_results.html
+++ b/www/templates/usness_gifts_results.html
@@ -23,7 +23,7 @@
                 <p>Example: Two introverts in an Us can enjoy ample alone time together and not become overextended socially. With one introvert and one extrovert in the Us, the introvert keeps the couple deeply connected to others and encourages down time, while the extrovert keeps the “party animal” in your Us alive.>
                 </p>
                 <br>
-                <button href="#" class="button button-block button-positive">Continue</button>
+                <button ui-sref="menu.tabs.usness" class="button button-block button-positive">Continue</button>
             </div>
 	</ion-content>
 </ion-view>
