--- a/www/templates/usness_personality.html
+++ b/www/templates/usness_personality.html
@@ -10,7 +10,7 @@
             <p>Identify some of your personality traits by choosing the answer in each section that best describes you most of the time.
             </p>
         </div>
-            <form class="usnessPersonalityForm" name="usnessPersonalityForm" novalidate="" ng-submit="usnessPersonality(usnessPersonalityForm)">
+            <form class="usnessPersonalityForm" name="usnessPersonalityForm" novalidate="" ng-submit="process('menu.tabs.usness_personality_results',usnessPersonalityForm)">
                 <div class="padding">
                     <hr>
                     <h3>Relating to People</h3>
