--- a/www/templates/4steps_setup.html
+++ b/www/templates/4steps_setup.html
@@ -8,7 +8,7 @@
             <p>When you get in a place of pain or stress, use the following 4 Steps to build new pathways in your brain that lead to different reactions. It’s important to say the steps out loud to your spouse. Verbalizing your 4 Steps moves you from the emotional part of your brain (amygdala) to the thinking part of your brain (prefrontal cortex), where you have the ability to choose a different response.</p> 
             <p>HELPFUL HINT:</p>
             <p>Your Pain Cycle will remind you of your typical feelings and ways of reacting when you’re in pain (Steps 1 and 2). Your Peace Cycle will remind you of your typical truths and new actions (Steps 3 and 4).</p>
-            <button href="#" class="button button-block button-calm">Review your Pain/Peace Cycle</button>
+            <button ui-sref="menu.tabs.cycles" class="button button-block button-calm">Review your Pain/Peace Cycle</button>
 		</div>
         <ul class="steps-list list">
                 <li class="item">
@@ -27,7 +27,7 @@
          <div class="grey_bg">
             <div class="padding">
              <p>If your pain was connected to a conflict with someone, decide on a time to share your 4 Steps with the person. Use the section below to record your 4 Steps to reference later.</p>
-                <form name="stepsForm" novalidate="" ng-submit="steps(stepsForm)">
+                <form name="stepsForm" novalidate="" ng-submit="process('menu.tabs.home',stepsForm)">
                 <div class="list list-inset">
                   <label class="item item-input item-stacked-label">
                     STEP 1 — I FEEL:
