--- a/www/templates/link.html
+++ b/www/templates/link.html
@@ -1,24 +1,24 @@
 <ion-view view-title="Link">
-<ion-nav-title>
-    <img src="img/logo.png" class="title-image" />
-</ion-nav-title>
+	<ion-nav-title>
+		<img src="img/logo.png" class="title-image" />
+	</ion-nav-title>
 	<ion-content>
-        <h2><i class="ion-gear-b" data-pack="default" data-tags="settings, options, cog"></i>&nbsp;Link To Your Spouse's Account</h2>
-        <a ng-if="!user.picture" ui-sref="menu.tabs.photo">
+		<h2>
+			<i class="ion-gear-b" data-pack="default" data-tags="settings, options, cog"></i>&nbsp;Link To Your Spouse's Account</h2>
+		<a ng-if="!user.User.picture" ui-sref="menu.tabs.photo">
 			<img src="img/upload-photo.jpg" alt="Usness" width="100%">
 		</a>
-		<img ng-if="user.picture" ng-src="{{DOMAIN + '/uploads/image_'+user.id+'.jpg'}}" width="100%">
-        <div class="padding">
-            <form name="linkForm" novalidate="" ng-submit="link(profileForm)">
+		<img ng-if="user.User.picture" ng-src="{{DOMAIN + '/uploads/image_'+user.User.id+'.jpg'}}" width="100%">
+		<div class="padding">
+			<p>For both you and your spouse to get the most of this app, you will need to link your accounts so that you can sync each other's information. Both of you do not need to do this, just one of you will activate the link.</p>
+			<h5>Your Code</h5>
+			<h2>{{user.User.link_code}}</h2>
+			<button ng-click="share(user.User.link_code)" class="button button-block button-calm">Share My Code</button>
+			<p>Or, if your spouse has shared their code with you, enter it here.</p>
+			<form name="linkForm" novalidate="" ng-submit="link(linkForm)">
 				<div class="list list-inset">
-					<p>For both you and your spouse to get the most of this app, you will need to link your accounts so that you can sync each other's information. Both of you do not need to do this, just one of you will activate the link.</p>
-					<h5>Your Code</h5>
-					<h2>{{user.link_code}}</h2>
-					<button ng-click="share(user.link_code)" class="button button-block button-calm">Share My Code</button>
-				</div>
-                <div class="list list-inset">
 					<div class="item item-input">
-						<input name="link_code" ng-model="link_code" type="text" placeholder="SPOUSE'S LINK CODE" required />
+						<input name="link_code" ng-model="linkUser.code" type="text" placeholder="SPOUSE'S LINK CODE" required />
 					</div>
 					<div class="form-errors" ng-show="linkForm.link_code.$error && linkForm.$submitted" ng-messages="linkForm.link_code.$error" ng-messages-include="templates/errors.html"></div>
 				</div>
