--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -10,20 +10,33 @@
 	</ion-side-menu-content>
 	<ion-side-menu side="right">
 		<ion-header-bar class="bar-stable bar-positive">
-			<h1 class="title"><span class="threeleaf">n</span> Navigation</h1>
+			<h1 class="title">
+				<span class="threeleaf">n</span>Navigation</h1>
 		</ion-header-bar>
 		<ion-content>
 			<ion-list>
-				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.about"><span class="threeleaf">h</span> About Us</ion-item>
-				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.find_group"><span class="threeleaf">S</span> Find a Group</ion-item>
-				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.lead_group"><span class="threeleaf">M</span> Lead a Group</ion-item>
-				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.resources"><span class="threeleaf">R</span> Resources</ion-item>
-				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.products"><span class="threeleaf">G</span> Products</ion-item>
-				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.app_info"><span class="threeleaf">d</span> App Info</ion-item>
-				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.profile"><span class="threeleaf">g</span> Profile</ion-item>
-				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.notifications"><span class="threeleaf">y</span> Notifications</ion-item>
-				<ion-item nav-clear="" menu-close="" ><a ng-click="logout()"><span class="threeleaf">u</span> Log Out</a></ion-item>
-				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.home"><span class="threeleaf">n</span> PAGE INDEX</ion-item>
+				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.home">
+					<span class="threeleaf">h</span>Welcome</ion-item>
+				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.about">
+					<span class="threeleaf">h</span>About Us</ion-item>
+				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.find_group">
+					<span class="threeleaf">S</span>Find a Group</ion-item>
+				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.lead_group">
+					<span class="threeleaf">M</span>Lead a Group</ion-item>
+				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.resources">
+					<span class="threeleaf">R</span>Resources</ion-item>
+				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.products">
+					<span class="threeleaf">G</span>Products</ion-item>
+				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.app_info">
+					<span class="threeleaf">d</span>App Info</ion-item>
+				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.profile">
+					<span class="threeleaf">g</span>Profile</ion-item>
+				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.notifications">
+					<span class="threeleaf">y</span>Notifications</ion-item>
+				<ion-item nav-clear="" menu-close="">
+					<a ng-click="logout()">
+						<span class="threeleaf">u</span>Log Out</a>
+				</ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
