--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -4,19 +4,19 @@
 	</ion-nav-title>
 	<ion-content>
 		<h2><i class="ion-gear-b" data-pack="default" data-tags="settings, options, cog"></i>&nbsp;Your Couple’s Profile</h2>
-		<a ng-if="!user.picture" ui-sref="menu.tabs.photo">
+		<a ng-if="!user.User.picture" ui-sref="menu.tabs.photo">
 			<img src="img/upload-photo.jpg" alt="Usness" width="100%">
 		</a>
-		<img ng-if="user.picture" ng-src="{{DOMAIN + '/uploads/image_'+user.id+'.jpg'}}" width="100%">
+		<img ng-if="user.User.picture" ng-src="{{DOMAIN + '/uploads/image_'+user.User.id+'.jpg'}}" width="100%">
 		<div class="padding">
 			<a ui-sref="menu.tabs.photo" class="button button-block button-calm">Change Photo</a>
 			<form name="profileForm" novalidate="" ng-submit="profile(profileForm)">
-				<a ui-sref="menu.tabs.photo">TEST</a>
 				<div class="list list-inset">
-					<h5>Name</h5>{{user.first_name}} {{user.last_name}}</div>
+					<h5>Name</h5>{{user.User.first_name}} {{user.User.last_name}}</div>
 				<div class="list list-inset">
 					<h5>Spouse's Name</h5>
-					<button ng-if="!user.spouse.id" ui-sref="menu.tabs.link" class="button button-block button-calm">Link to Spouse’s Account</button>{{user.spouse.first_name}} {{user.spouse.last_name}}
+					<button ng-if="!user.Spouse.id" ui-sref="menu.tabs.link" class="button button-block button-calm">Link to Spouse’s Account</button>
+					{{user.Spouse.first_name}} {{user.Spouse.last_name}}
 				</div>
 				<!--Needs Validation-->
 				<div class="list list-inset">
